...

  Scaffold(
      modifier = Modifier.testTag("editScreen"),
      topBar = {
        TopAppBar(
            title = { Text("Edit Travel", modifier = Modifier.testTag("editTravelText")) },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("goBackButton")) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
...
                              toggled = !toggled
                            },
                            modifier = Modifier.testTag("manageParticipantsButton"))

                        Spacer(modifier = Modifier.height(8.dp))
...
                              toggled = !toggled
                            },
                            modifier = Modifier.testTag("importEmailFab"))
                      }
                } else {
                  FloatingActionButton(
                      onClick = { toggled = !toggled }, modifier = Modifier.testTag("plusButton")) {
                        Icon(Icons.Default.Add, contentDescription = "Expand button")
                      }
...
          modifier =
              Modifier.padding(padding)
                  .testTag("editTravelColumn")
                  .verticalScroll(rememberScrollState()),
          Arrangement.spacedBy(8.dp),
...
                modifier =
                    Modifier.padding(top = 8.dp, start = 8.dp, end = 8.dp)
                        .testTag("editTravelRow")) {
                  Icon(
                      imageVector = Icons.Default.Person,
...
                          Modifier.padding(start = 50.dp, end = 8.dp)
                              .size(50.dp)
                              .testTag("editTravelParticipantIcon"))
                  Text(
                      "${selectedTravel!!.allParticipants.size} participants",
                      modifier = Modifier.weight(1f).testTag("inputParticipants"))
                }

...
                onValueChange = { keystroke -> titleText.value = keystroke },
                modifier =
                    Modifier.testTag("inputTravelTitle")
                        .fillMaxWidth(1f)
                        .padding(horizontal = 12.dp),
...
                onValueChange = { keystroke -> descriptionText.value = keystroke },
                modifier =
                    Modifier.testTag("inputTravelDescription")
                        .fillMaxWidth(1f)
                        .padding(horizontal = 12.dp),
...
                      Modifier.fillMaxWidth()
                          .padding(horizontal = 12.dp)
                          .testTag("inputTravelLocation"))

              // Dropdown for location suggestions
...
                      Modifier.fillMaxWidth(1f)
                          .heightIn(max = 200.dp)
                          .testTag("locationDropdownMenu")) {
                    locationSuggestions.filterNotNull().take(3).forEach { location ->
                      DropdownMenuItem(
...
                placeholder = { Text("DD/MM/YYYY") },
                modifier =
                    Modifier.testTag("inputTravelStartTime")
                        .fillMaxWidth(1f)
                        .padding(horizontal = 12.dp),
...
                        }
                      },
                      modifier = Modifier.testTag("startDatePickerButton")) {
                        Icon(
                            imageVector = Icons.Default.DateRange,
...
                placeholder = { Text("DD/MM/YYYY") },
                modifier =
                    Modifier.testTag("inputTravelEndTime")
                        .fillMaxWidth(1f)
                        .padding(horizontal = 12.dp),
...
                        }
                      },
                      modifier = Modifier.testTag("endDatePickerButton")) {
                        Icon(
                            imageVector = Icons.Default.DateRange,
...
                  }
                },
                modifier = Modifier.testTag("travelSaveButton")) {
                  Text("Save")
                }
...
                  Toast.makeText(context, "Delete clicked", Toast.LENGTH_SHORT).show()
                },
                modifier = Modifier.testTag("travelDeleteButton").padding(vertical = 8.dp)) {
                  Text(
                      text = "Delete",
...
      Text(
          "No Travel to be edited was selected. If you read this message an error has occurred.",
          modifier = Modifier.padding(padding).testTag("noTravelSelectedText"))
    }
  }
...
