...
        // Button to toggle paths
        TravelModesActivitiesButton(
            icon = if (showPaths) Icons.Filled.Visibility else Icons.Filled.VisibilityOff,
            contentDescription = if (showPaths) "Hide Paths" else "Show Paths",
            isActive = showPaths,
            onClick = onTogglePaths,
            testTag = "ToggleModeButtonActivities")

        // Travel mode buttons
        TravelModesActivitiesButton(
            icon = Icons.AutoMirrored.Filled.DirectionsWalk,
            contentDescription = "Walking Mode",
            isActive = travelMode == "walking",
...
